deleted unused code

--- a/scripts/data_analysis/05.aggregate_statistics.ipynb
+++ b/scripts/data_analysis/05.aggregate_statistics.ipynb
@@ -97,41 +97,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ba3a618-2c2f-488b-a8f5-b88c893af5a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # new stats\n",
-    "# df_old = pd.read_csv(datadir / 'system_validity_prev.csv', index_col='system_id')\n",
-    "# all_new_stats = df.index[np.logical_and(np.isnan(df_old.tsteps_before_decay), ~invalid_rule)]\n",
-    "# # new_stats = [x for x in stats_to_calc if x not in missing_stats]\n",
-    "# data_params = dict(sidx_list = new_stats)\n",
-    "# len(new_stats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2bc77baa-8385-4e72-81f4-a44304b42405",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# iterate = 1\n",
-    "# if iterate:\n",
-    "#     batch, size = 23, 50\n",
-    "#     new_stats = all_new_stats[50*(batch-21):50*(batch-20)]\n",
-    "#     outpath = outdir / f'b{batch}s{size}.nc'\n",
-    "# else:\n",
-    "#     batch, size = 21, 5\n",
-    "#     new_stats = all_new_stats[50*(batch-21):50*(batch-20)]\n",
-    "#     outpath = outdir / f'b{batch}s{size}.nc'\n",
-    "\n",
-    "# data_params = dict(sidx_ignore=invalid, batch=batch, size=size)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "30ad1b1e-91fc-4f9d-8843-037305155855",
    "metadata": {},
@@ -141,8 +106,7 @@
     "\n",
     "iterate = 1\n",
     "if iterate:\n",
-    "    # batch, size = int(sys.argv[1]), int(sys.argv[2])\n",
-    "    batch, size = 24, 50\n",
+    "    batch, size = int(sys.argv[1]), int(sys.argv[2])\n",
     "    outpath = outdir / f'b{batch}s{size}.nc'\n",
     "    n_clouds = size\n",
     "else:\n",
@@ -427,16 +391,6 @@
    "outputs": [],
    "source": [
     "logging.info(f\"done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "084bff2e-8db6-400a-9430-642922a6d1f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds"
    ]
   },
   {
