final vertical velocity histograms and small figure adjustments

--- a/scripts/data_analysis/07.upper_level_cores.ipynb
+++ b/scripts/data_analysis/07.upper_level_cores.ipynb
@@ -23,67 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3b4a8a0e-de76-4d23-86cf-c25f4d43a011",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b12s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b16s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b3s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b2s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b13s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b7s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b8s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b19s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b10s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b20s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b6s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b4s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b18s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b14s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b21s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b23s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b5s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b15s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b17s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b22s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b11s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b1s50.nc'),\n",
-       " PosixPath('/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/dcc_statisticsV3/b9s50.nc')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datadir = pathlib.Path(f'/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/')\n",
-    "list(datadir.glob(\"dcc_statisticsV3/*.nc\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ea53b697-32d1-46e6-b4e9-e9c6c74772a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = list(datadir.glob(\"dcc_statisticsV3/*.nc\"))[:]"
+    "datadir = pathlib.Path(f'/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0ae2cd21-7e3d-42a5-9823-87e437230ea7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# which cores sat above ~4km?\n",
-    "# files = list(datadir.glob(\"dcc_statistics/*.nc\"))\n",
+    "files = list(datadir.glob(\"dcc_statistics/*.nc\"))\n",
     "stats = xr.open_mfdataset(files, concat_dim='system', combine='nested')\n",
     "stats['lifetime_hours'] = stats['lifetime'] / np.timedelta64(1, \"h\")\n",
     "systems = stats.system.values"
@@ -91,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "a1e70575-a26e-4d6c-8ece-c7fccdf85658",
    "metadata": {
     "scrolled": true
@@ -124,13 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6e50246b-c7bf-4b7b-a6db-4dfb977e99d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "upper = stats.sel(system=had_upper_level_cores.values)\n",
     "lower = stats.sel(system=[s for s in stats.system.values if s not in had_upper_level_cores])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7e072255-860c-4724-8aea-294896b97d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10772357723577236"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upper.system.size / stats.system.size # proportion that had upper level cores"
    ]
   },
   {
