--- a/scripts/data_analysis/02.vertical_velocity_histograms.ipynb
+++ b/scripts/data_analysis/02.vertical_velocity_histograms.ipynb
@@ -14,6 +14,7 @@
     "import global3d_track as g3d\n",
     "src = g3d.scripts.src\n",
     "import xarray as xr\n",
+    "import sys \n",
     "\n",
     "work_dir = pathlib.Path(f'/work/bb1153/b382635/plots/tracked_results_2025/dataset_paper/results_data/acp_submission/')\n",
     "work_dir = work_dir / 'w_histograms'\n",
@@ -33,7 +34,7 @@
     "start = '20210701'\n",
     "end = '20210708'\n",
     "cat = intake.open_catalog(\"https://data.nextgems-h2020.eu/catalog.yaml\")\n",
-    "ds = cat.ICON.ngc4008a(time=\"PT15M\", zoom=9).to_dask().sel(time=slice(start, end))"
+    "data = cat.ICON.ngc4008a(time=\"PT15M\", zoom=9).to_dask().sel(time=slice(start, end))"
    ]
   },
   {
@@ -43,12 +44,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # select subset\n",
-    "# i = int(sys.argv[-1])\n",
-    "# # i = 0\n",
-    "# np.random.seed(12)\n",
-    "# random_timesteps = np.random.randint(0,ds.time.size,ds.time.size)\n",
-    "# ds = ds.isel(time=random_timesteps[i])"
+    "# select subset\n",
+    "i = int(sys.argv[-1])\n",
+    "# i = 0\n",
+    "np.random.seed(12)\n",
+    "random_timesteps = np.random.randint(0,ds.time.size,ds.time.size)\n",
+    "ds = data.isel(time=random_timesteps[i])"
    ]
   },
   {
@@ -58,9 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # regrid\n",
-    "# region = 'amazon'\n",
-    "# ds = src.utils.regrid.Regrid(region).perform(dataset[['pfull','wa_phy']], zoom=9, resolution=0.1).sel(level_full=slice(40,90),level_half=slice(41,91))"
+    "# regrid\n",
+    "region = 'amazon'\n",
+    "ds = src.utils.regrid.Regrid(region).perform(ds[['pfull','wa_phy']], zoom=9, resolution=0.1).sel(level_full=slice(40,90),level_half=slice(41,91))"
    ]
   },
   {
@@ -70,10 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # approximate 500 hPa level\n",
+    "# approximate 500 hPa level\n",
     "\n",
-    "# p500 = np.abs((ds.pfull*0.01) - 500).idxmin('level_full')\n",
-    "# ds_500 = ds.sel(level_half=p500, level_full=p500)"
+    "p500 = np.abs((ds.pfull*0.01) - 500).idxmin('level_full')\n",
+    "ds_500 = ds.sel(level_half=p500, level_full=p500)"
    ]
   },
   {
@@ -83,16 +84,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # save histogram for time\n",
+    "# save histogram for time\n",
     "\n",
-    "# vals = ds_500.wa_phy.values\n",
-    "# w_bins = np.linspace(-15,15,1000)\n",
-    "# w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
+    "vals = ds_500.wa_phy.values\n",
+    "w_bins = np.linspace(-15,15,1000)\n",
+    "w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
     "\n",
-    "# with open(work_dir + f'w500_histogram-{i}.npy', 'wb') as f:\n",
-    "#     np.save(f, w_hist)\n",
-    "# with open(work_dir + 'w500_histogram_bins.npy', 'wb') as f:\n",
-    "#     np.save(f, w_bins)"
+    "with open(work_dir + f'w500_histogram-{i}.npy', 'wb') as f:\n",
+    "    np.save(f, w_hist)\n",
+    "with open(work_dir + 'w500_histogram_bins.npy', 'wb') as f:\n",
+    "    np.save(f, w_bins)"
    ]
   },
   {
@@ -102,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # cloudy cases\n",
-    "# cloudy = (ds.cli+ds.clw>1e-5).sum('level_full') > 0 # more than 1 layer with cli+clw > 1e-5"
+    "# cloudy cases\n",
+    "cloudy = (ds.cli+ds.clw>1e-5).sum('level_full') > 0 # more than 1 layer with cli+clw > 1e-5"
    ]
   },
   {
@@ -113,29 +114,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # save cloudy / cloud free histograms for time\n",
+    "# save cloudy / cloud free histograms for time\n",
     "\n",
-    "# vals = ds_500.wa_phy.where(cloudy).values\n",
-    "# w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
+    "vals = ds_500.wa_phy.where(cloudy).values\n",
+    "w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
     "\n",
-    "# with open(work_dir + f'w500_histogram_cloudy-{i}.npy', 'wb') as f:\n",
-    "#     np.save(f, w_hist)\n",
+    "with open(work_dir + f'w500_histogram_cloudy-{i}.npy', 'wb') as f:\n",
+    "    np.save(f, w_hist)\n",
     "\n",
-    "# vals = ds_500.wa_phy.where(~cloudy).values\n",
-    "# w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
+    "vals = ds_500.wa_phy.where(~cloudy).values\n",
+    "w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
     "\n",
-    "# with open(work_dir + f'w500_histogram_not_cloudy-{i}.npy', 'wb') as f:\n",
-    "#     np.save(f, w_hist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e8a1737-7f15-4575-9fe6-ec84204e0171",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = int(sys.argv[-1])"
+    "with open(work_dir + f'w500_histogram_not_cloudy-{i}.npy', 'wb') as f:\n",
+    "    np.save(f, w_hist)"
    ]
   },
   {
@@ -592,13 +583,13 @@
     "# afternoon very cloudy\n",
     "\n",
     "# - sample\n",
-    "arvo_times = ds.time.sel(time=ds.time.dt.hour.isin([x-4 for x in [14,15,16,17,18]]))\n",
+    "arvo_times = data.time.sel(time=data.time.dt.hour.isin([x-4 for x in [14,15,16,17,18]]))\n",
     "random_timesteps = np.random.randint(0,arvo_times.size,arvo_times.size)\n",
     "ds = ds.sel(time=arvo_times.isel(time=random_timesteps[i]))\n",
     "\n",
     "# - regrid\n",
     "region = 'amazon'\n",
-    "ds = src.utils.regrid.Regrid(region).perform(dataset[['pfull','wa_phy']], zoom=9, resolution=0.1).sel(level_full=slice(40,90),level_half=slice(41,91))\n",
+    "ds = src.utils.regrid.Regrid(region).perform(ds[['pfull','wa_phy','cli','clw']], zoom=9, resolution=0.1).sel(level_full=slice(40,90),level_half=slice(41,91))\n",
     "\n",
     "# - approximate 500 hPa level\n",
     "\n",
@@ -621,7 +612,7 @@
     "vals = ds_500.wa_phy.where(arvo_very_cloudy).values\n",
     "w_hist, bins = np.histogram(vals[~np.isnan(vals)], bins=w_bins)\n",
     "\n",
-    "with open(work_dir + f'w500_histogram_arvo_very_cloudy-{i}.npy', 'wb') as f:\n",
+    "with open(work_dir / f'w500_histogram_arvo_very_cloudy-{i}.npy', 'wb') as f:\n",
     "    np.save(f, w_hist)\n"
    ]
   },
